@@ -92,6 +92,8 @@ Improvements
 
 * SOLR-16616: JWTAuthPlugin: Read trusted X509 certificates from multiple files (janhoy)
 
+* SOLR-15772: More visible security warnings in Admin UI (janhoy)
+
 * SOLR-15787: FileSystemConfigSetService: implement the abstraction completely.  It could be useful
   for putting ConfigSets on a shared file system.  (Nazerke Seidan, David Smiley)
 
